fixed spacing issues, caused by an 's' next to the section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 section {
-    margin: 3.5rem 0 2.5rem 0;
+    margin: 3.5rem 0 0 0;
     padding-bottom: 3rem;
 }
 
@@ -88,7 +88,6 @@ p {
 
 .list-group-item {
     font-size: 0.9rem;
-    padding: 6px 16px;
     color: #e2e2e2;
 }
 
@@ -109,16 +108,6 @@ p {
 .navbar,
 footer {
     background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
-}
-
-.nav-link {
-    padding: 8px 0 8px 5px;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
-    margin-right: 5px;
-    padding-right: 0.6rem;
-    padding-left: 0.6rem;
 }
 
 .nav-link:hover {
